# todo-fastapi

./: README.md  pyproject.toml  testdb.db  todosapp.db
TodoApp/: database.py  main.py  models.py
TodoApp/routers/: admin.py  auth.py  todos.py  users.py
TodoApp/static/js/: base.js
TodoApp/templates/: add-todo.html  edit-todo.html  home.html  layout.html  login.html  navbar.html  register.html  todo.html
TodoApp/test/: test_admin.py  test_auth.py  test_example.py  test_todos.py  test_users.py  utils.py
